--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".PolylineActivity">
+            android:label="@string/polyline_demo_label"/>
+        </activity>
     </application>
 
 </manifest>
